
	* Added support for running multiple ESXX instances via init
	scripts.

	* Command line script files now reads config file from
	/etc/{default,defaults,sysconfig}/esxx-js so remote JMX ports
	do not interfer with scripts.

	* Moved global constructors Logger, Request and Response to
	ESXX.Logger, ESXX.Request and ESXX.Response in order to reduce
	the number of ESXX-introduced global variables. URI stays.

	* New class, ESXX.LRUCache. New magic property, esxx.tls,
	which is a per-application, per-thread LRUCache object, and
	non-magic esxx.pls, which is just a per-application LRUCache.

	* Added a multipart/form-data parser to handle HTTP file
	uploads.

0.9.20080927
	* Fixed a bug that closed System.in in script mode, causing
	System.console() to return null.

	* When using the built-in HTTP server, a body will never be
	sent when the status code is 1xx, 204 or 304, as per HTTP
	spec.

0.9.20080924
	* Upgraded to HtmlCleaner 2.1.

	* Upgraded to HTTPClient 4.0 beta 1 and HTTPCore 4.0 beta 2.

	* When creating a new URI object from an old, also copy all of
	the old object's properties (such as auth etc).

	* Added code for application/x-www-form-urlencoded encoding in
	responses (and thus HTTP URI requests).

	* Recognize Apache's Authorization "CGI" environment variable
	as an HTTP header.

0.9.20080821
	* Loads of bug fixes.

	* Added getScriptFilename(), getPathInfo(), getScriptName() to
	Request object.

	* Disabled validate-if-schema feature on XML parser.

	* Added exit handler support, to execute JS code when an app
	is being unloaded.

	* The error handler now receives (req, ex) arguments.

	* Added 'buffered' property to the Response object, which
	makes ESXX buffer the response in RAM, in order to be able to provide
	the Content-Length HTTP header.

	* Added JMX support. Apps can be inspected and unloaded via
	JConsole.

	* Init script now work on RHEL/CentOS 4.x.

0.9.20080619
	* Initial binary release.