@@ -61,6 +61,8 @@
 	* Added a multipart/form-data parser to handle HTTP file
 	uploads.
 
+	* Added timer handler support.
+
 0.9.20080927
 	* Fixed a bug that closed System.in in script mode, causing
 	System.console() to return null.
